--- a/BookRide/src/main/resources/templates/admin/index.html
+++ b/BookRide/src/main/resources/templates/admin/index.html
@@ -214,8 +214,8 @@
             <div class="col-2 global-first-col">
                 <h1 class="display-6 header-size">Reports</h1>
                 <ul class="list-group">
-                    <a class="list-group-item redirect-list" href="./payment_report_search.html">Payments</a>
-                    <a class="list-group-item redirect-list" href="./res_search.html">Reservations</a>
+                    <a class="list-group-item redirect-list" href="./payment_report_search.html">Orders</a>
+                    <a class="list-group-item redirect-list" href="./res_search.html"> Pending Reservations</a>
                     <a class="list-group-item redirect-list" href="/admin/car_status">Cars Status</a>
                     <a class="list-group-item redirect-list" href="./customer_res_search.html">Customer Reservations</a>
                     <a class="list-group-item redirect-list" href="./car_res_search.html">Car Reservations</a>
@@ -223,8 +223,7 @@
                       <a class="list-group-item redirect-list" href="/admin/category">Add New category</a>
                     <a class="list-group-item redirect-list" href="#">Current Reservations</a>
                      <a class="list-group-item redirect-list" href="/admin/users">User deatils</a>
-                    <a class="list-group-item redirect-list" href="./office_home.html">add admin</a>
-                    <a class="list-group-item redirect-list" href="./office_home.html">admins</a>
+                   
                 </ul>
                 <img class="gif" src="https://media0.giphy.com/media/9wUVOS1E0bffmkR2cH/200w.webp?cid=ecf05e47ewqi4ci5xxvwm4dxc8e7pot7q7rxh3zgw7n673oq&rid=200w.webp&ct=s" />
             </div>
