--- a/BookRide/src/main/resources/templates/index.html
+++ b/BookRide/src/main/resources/templates/index.html
@@ -297,7 +297,7 @@ body {
 <script>
   document.querySelector('#reserveButton').addEventListener('click', function() {
     // Ensure the redirection is to the correct /user/book path
-    window.location.href = '/user/book';  // Redirect to /user/book
+    window.location.href = '/products';  // Redirect to /user/book
   });
 </script>
 					
