--- a/BookRide/src/main/resources/templates/product.html
+++ b/BookRide/src/main/resources/templates/product.html
@@ -143,7 +143,7 @@
   </nav>
 
   <div class="search-container">
-    <h1 class="text-center my-4">Search Products</h1>
+    <h1 class="text-center my-4">Search Location</h1>
     <div class="search-bar text-center">
       <input type="text" id="searchInput" class="form-control" placeholder="Search for products...">
     </div>
