--- a/BookRide/src/main/resources/templates/view_product.html
+++ b/BookRide/src/main/resources/templates/view_product.html
@@ -8,9 +8,9 @@
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Roboto:wght@300;500&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
   <style>
-    body {
+     body {
       font-family: 'Montserrat', sans-serif;
-      background: linear-gradient(135deg, #FFDEE9, #B5FFFC);
+      background: linear-gradient(135deg, #A8E6CF, #DCEDC1);
       color: #333;
       margin: 0;
       padding: 0;
@@ -190,7 +190,7 @@
         <h5 class="card-title">[[${product.model}]]</h5>
         <p class="card-text">Make: [[${product.make}]]</p>
         <p class="card-text">Year: [[${product.year}]]</p>
-        <p class="card-text">Category: [[${product.category}]]</p>
+        <p class="card-text">Location: [[${product.category}]]</p>
         <p>
           <span class="fw-bold text-success">Product Details:</span><br class="text-warning">
           Status:
@@ -207,6 +207,17 @@
           <span class="fs-6 text-decoration-line-through text-danger">[[${product.price}]]</span>
           <span class="fs-6 text-success">[[${product.discount}]]% off</span>
         </p>
+      <th:block th:if="${product.stock > 0}">
+    <a th:href="@{/user/book/{id}(id=${product.id})}" class="btn btn-success">Reserved</a>
+</th:block>
+
+
+             <th:block th:if="${product.stock<0}">
+          <button class="btn btn-danger">pending list</button>
+          
+          </th:block>
+          
+          
       </div>
     </div>
   </div>
@@ -215,15 +226,7 @@
   
  
  
-  <div class="floating-cart-btn">
-    <i class="fas fa-shopping-cart"></i>
-  </div>
   
-  <script>   document.querySelector('.floating-cart-btn').addEventListener('click', function() {
-      window.location.href = '/user/book';
-  });
-</script>
-
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
 </body>
 </html>
