--- a/BookRide/src/main/resources/templates/product.html
+++ b/BookRide/src/main/resources/templates/product.html
@@ -153,7 +153,7 @@
         <p class="fs-3 text-center">Products</p>
         <div class="row">
           <th:block th:if="${productsSize >0}">
-            <div class="col-md-3" th:each="p:${products}">
+            <div class="col-md-3" th:each="p:${car}">
               <div class="card mt-4">
                 <div class="card-body text-center shadow-lg bg-warning decoration-none">
                   <img alt="" th:src="@{'/img/product_img/'+${p.image}}" width="100%" height="150px">
@@ -162,7 +162,7 @@
                     <p class="fs-6 fw-bold">
                       <span>&#8377; [[${p.discountPrice}]]</span> <br> <span class="text-decoration-line-through text-secondary">&#8377; [[${p.price}]]</span> <span class="fs-6 text-success">[[${p.discount}]]% off </span>
                     </p>
-                    <a th:href="@{'/product/'+${p.id}}" class="btn btn-primary col-md-6 offset-md-3">View Details</a>
+                    <a th:href="@{'/car/'+${p.id}}" class="btn btn-primary col-md-6 offset-md-3">View Details</a>
                   </div>
                 </div>
               </div>
